Refactor Kafka RPC framework for improved streaming and error handling
- Updated greeter.proto to change StreamCount and ScalableStreamCount methods to return streams, enhancing streaming capabilities.
- Enhanced NegativeScenariosIntegrationTest to include more comprehensive error message checks for various failure scenarios.
- Modified KafkaRpcGenerator to support new header conventions and improved error handling in streaming methods.
- Refactored AbstractKafkaRpcChannel and PooledKafkaRpcChannel to utilize UTF-8 encoding for header values, ensuring consistent message processing.
- Introduced new constants in KafkaRpcConstants for error handling and improved polling mechanisms in KafkaRpcServer and related classes.